feat: Agregar autenticacioón con Google OAuth 2.0

--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Google OAuth 2.0 Configuration
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_REDIRECT_URI="${APP_URL}/auth/google/callback"
+
 VITE_APP_NAME="${APP_NAME}"
