--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 .env
 .env.backup
 .env.production
+.idea
 .phpactor.json
 .phpunit.result.cache
+.vscode
 /.fleet
 /.idea
 /.nova
@@ -12,13 +14,22 @@
 /.vscode
 /.zed
 /auth.json
+/bootstrap/cache/*
 /node_modules
 /public/build
 /public/hot
 /public/storage
 /storage/*.key
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/views/*
 /storage/pail
 /vendor
 Homestead.json
 Homestead.yaml
+npm-debug.log*
+yarn-error.log*
 Thumbs.db
+*.swp
+*.swo
+*~
